# SPPOO

cpp/: bibliofiles.hpp  book.hpp  books.csv  magazine.hpp  main  main.cpp  thesis.csv  thesis.hpp  user.csv
cpp copy/: CMakeLists.txt  INSTALL_NCURSES.txt  bibliofiles.hpp  book.hpp  mags.csv  main.cpp  main.out  test.sh  thesis.hpp  user.csv
cpp copy/main.dSYM/Contents/Resources/DWARF/: main
cpp copy/output/: main
cpp copy/tests/: CMakeLists.txt
cpp/main.dSYM/Contents/Resources/DWARF/: main
cpp/main.dSYM/Contents/Resources/Relocations/x86_64/: main.yml
cpp/output/: main
cpp/output/main.dSYM/Contents/Resources/DWARF/: main
cpp/output/main.dSYM/Contents/Resources/Relocations/x86_64/: main.yml
documentation/: main 2.fls  main 4.synctex(busy)  main.aux  main.bbl  main.bcf  main.blg  main.fdb_latexmk  main.fls  main.out  main.run.xml  main.tex  main.toc  references.bib
uml/: main.fdb_latexmk  main.fls  main.tex
